Wed Dec  2 11:21:10 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (time_asctime): workaround for MSVCRT's bug.
	  backported from trunk (r18871).  ref [ruby-core:26992]

Tue Dec  1 18:00:12 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/digest/test_digest_extend.rb: added tests for digest framework.

Mon Nov 30 16:57:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (command_output): $makeflags are already quoted.

Mon Nov 30 16:54:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, win32/Makefile.sub (EXECUTABLE_EXTS): moved from
	  dln.c:dln_find_1().

	* lib/mkmf.rb (def find_executable0): use EXECUTABLE_EXTS, not
	  only EXEEXT.  [ruby-core:26821]

Thu Nov 26 00:01:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/digest/test_digest_extend.rb: Added tests for current digest
	  framework.

Wed Nov 25 19:32:25 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_instance_method_unimpl): Do not
	  call rb_inspect() on an object that does not implement necessary
	  methods; reported by NaHi.

Wed Nov 25 15:06:42 2009  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/test_array.rb (TestArray#test_splat): Add tests for a
	  recently introduced bug in array splatting.

Tue Nov 24 16:18:35 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/md5.rb, ext/digest/lib/sha1.rb: Add an
	  obsoleteness warning under -w/-v.

Mon Nov 23 23:59:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_method_missing): adjusted format and argument number.

	* eval.c (rb_call): fixed for super in cached method.
	  [ruby-dev:39757]

Mon Nov 23 11:26:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): removed duplication.

	* dln.c (dln_find_1): not use prototype definition.

Thu Nov 19 23:22:40 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (putbinaryfile): use APPE for resume.
	  Thanks, Tomoyuki Chikanaga.
