@@ -126,9 +126,27 @@ class TestSuper < Test::Unit::TestCase
     end
   end
 
-  def test_define_method # [ruby-core:03856]
+  class B
+    def m
+      [self, "#{self.class.to_s}::m"]
+    end
+  end
+
+  class C < B
+    def self.t
+      define_method(:m) {super}
+    end
+  end
+
+  def test_define_method
     a = A.new
     a.uu(12)
-    assert_equal("A#tt", a.tt(12))
+    assert_equal("A#tt", a.tt(12), '[ruby-core:03856]')
+
+    bug2419 = '[ruby-core:26984]'
+    q = C.t
+    assert_raise(NoMethodError, bug2419) {q.call}
+    c = C.new
+    assert_equal([c, "#{C.to_s}::m"], c.m, bug2419)
   end
 end
