@@ -1,3 +1,8 @@
+Wed Dec  2 17:32:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (proc_invoke): unbound block created by define_method
+	  cannot call super.  [ruby-core:26984]
+
 Wed Dec  2 11:21:10 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* time.c (time_asctime): workaround for MSVCRT's bug.
